# saavn-cli

./: .gitignore  Cargo.toml  README.md  flake.nix
saavn-rs/: Cargo.toml
saavn-rs/src/: lib.rs
src/: main.rs
