[package]
name = "saavn-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.9", features = ["derive"] }
reqwest = {version="0.11.12", features=["stream"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = {version= "1.21.2", features=["full"]}
dialoguer = {version= "0.10.2", features=["fuzzy-select"]}
console = "0.15.2"
indicatif = "0.17.1"
futures-util = "0.3.24"
